[package]
name = "rustbam"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "rustbam"  # CLI command as `rustbam`
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rust-htslib = "0.43"  # HTSlib wrapper for BAM processing
rayon = "1.8" # Parallelization
clap = { version = "4.4", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "rustbam"
path = "src/lib.rs"

[package.metadata]
test_assets = ["tests/example.bam"]

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
