[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "rustbam"
version = "0.2.0"
authors = [
    { name = "Seongmin Choi", email = "soymintc@gmail.com" }
]
description = "A Rust-based BAM depth calculator for Python."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
keywords = ["bam", "bioinformatics", "genomics", "rust", "parallel"]

[project.scripts]
rustbam = "rustbam.cli:get_depths_cli"

[tool.maturin]
bindings = "pyo3"
module-name = "rustbam._rustbam"
features = ["pyo3/extension-module", "pyo3/abi3-py37"]

[tool.setuptools]
packages = ["rustbam"]
